cleaned up css/html files, and fixed issue causing border overlapping.

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,115 +1,102 @@
-    * {
-      padding: 5px;
-    }
-
-    body {
-    font-family : 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin : 1px;
-    padding : 10px;
-    background-color : #ffffff;
-    font:16px;
-    }
-    header {
-    padding : 10px;
-    
-    text-align : center;
-    color : #000000;
-    background-image : url("../assets/images/banner-image.png");
-    background-size : cover;
-    background-position : center;
-    width : auto;
-    }
-    nav {
-    display : flex;
-    background-color : #ffffff;
-    list-style : none;
-    border: #000000 1px solid;
-    text-align: center;
-    }
-    nav a {
-    text-decoration : none;
-    margin: 10px;
-    padding: 5px;
-    
-    
-    }
-    main {
-    display : flex;
-    flex-wrap : wrap;
-    border: #000000 1px solid;
-    }
-    aside {
-    flex : 1;
-    padding : 5px;
-    width : 100%;
-    height : auto;
-    border: #000000 1px solid;
-    }
-    img {
-    background-size : contain;
-    background-repeat : no-repeat;
-    block-size : auto;
-    height : 200px;
-    width : auto;
-    }
-    #project {
-    block-size : 100%;  
-    display : flex;
-    flex-wrap : wrap;
-    
-    justify-content : flex-end;  
-    }
-    .image2 {
-      max-width: 100%;
-      height: auto;
-      left: 0px;
-      right: 0px;
-      border: #000000 1px solid;
-     
-      } 
-    .image3  {
-      max-width: 100%;
-      height: auto;
-      left: 0px;
-      right: 0px; 
-      border: #000000 1px solid;
-      } 
-      .image4  {
-        max-width: 100%;
-        height: auto;
-        left: 0px;
-        right: 0px; 
-        border: #000000 1px solid;
-        } 
-    
-    section  {
-    padding: 5px;
-    flex : 2;
-    background-color : #fff;
-    border: #000000 1px solid;
-    text-align: center;
+body {
+	font-family : 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	margin : 1px;
+	padding : 10px;
+	background-color : #ffffff;
+	font:16px;
+}
+header {
+	padding : 10px;
+	text-align : center;
+	color : #000000;
+	background-image : url("../assets/images/banner-image.png");
+	background-size : cover;
+	background-position : center;
+	width : auto;
+}
+nav {
+	display : flex;
+	background-color : #ffffff;
+	list-style : none;
+	border: #000000 1px solid;
+	text-align: center;
+}
+nav a {
+	text-decoration : none;
+	margin: 10px;
+	padding: 5px;
+}
+main {
+	display : flex;
+	flex-wrap : wrap;
+	border: #000000 1px solid;
+}
+aside {
+	flex : 1;
+	width : 100%;
+	height : 100%;
+	border: #000000 1px solid;
+}
+img {
+	background-size : contain;
+	background-repeat : no-repeat;
+	block-size : auto;
+	height : 200px;
+	width : auto;
+  box-shadow: 12px 12px 2px 1px rgba(131, 110, 110, 0.2);
+}
+#project {
+	block-size : 100%;
+	display : flex;
+	flex-wrap : wrap;
+	justify-content : flex-end;
   
-    }
-    footer {
-    text-align : center;
-    background-image : url("../assets/images/banner-image.png");
-    color : #000000;
-    background-size : cover;
-    background-position : center;
-    width : 100%;
-    height: 100%
-    padding 5px;
-    
-    }
-    @media screen and (max-width: 800px) {
-    main, nav, div, footer, #project {
-    flex-direction : column;
-    margin: 1px;
-    padding: 5px;
-    
-    }
-    aside {
-    order : 0;
-    }
-  }
-  
+}
+.image2 {
+	max-width: 100%;
+	height: auto;
+	left: 0px;
+	right: 0px;
+	border: #000000 1px solid;
+}
+.image3 {
+	max-width: 100%;
+	height: auto;
+	left: 0px;
+	right: 0px;
+	border: #000000 1px solid;
+}
+.image4 {
+	max-width: 100%;
+	height: auto;
+	left: 0px;
+	right: 0px;
+	border: #000000 1px solid;
+}
+section {
+	flex : 2;
+	background-color : #fff;
+	border: #000000 1px solid;
+	text-align: center;
+	width : 100%;
+	height : 100%;
+}
+footer {
+	text-align : center;
+	background-image : url("../assets/images/banner-image.png");
+	color : #000000;
+	background-size : cover;
+	background-position : center;
+	width : 100%;
+	height: 100%padding 5px;
+}
+@media screen and (max-width: 800px) {
+	main, nav, div, footer, #project {
+		flex-direction : column;
+		margin: 0px;
+		padding: 5px;
+	}
+	aside {
+		order : 0;
+	}
+}
